Changes for 1.6.1.1
* Increasing max memory from 512mb to 640mb, and up to 768mb for online games. (veqryn)


Changes for 1.6.1
* Rewriting build file and including META-INF, hopefully fixing issue with Gmail play-by-email emailer on linux machines. (rain)

* Changing trigger property changes to use "-reset-" instead of clear. Can now be used with any attachment option. (veqryn)

* Creating a reset method for every single attachment property. These can now be used to return a property to its default value. (veqryn)

* Fixing some bugs introduced into AI with the factory switch. (veqryn)

* Fixing null pointer error in Easy AI purchasing algorithm for getting costs of units. (veqryn)

* Changing maxDamage to default to 2 instead of -1. This is for bombing type damage, and it acts as either a multiplier of territory value or as a hard set number depending on canProduceXUnits. (veqryn)

* Fixing AIs to no longer use isFactory, and instead use things like canProduceUnits, etc. (veqryn)

* Abstracting isFactory setting and matches to use the component parts. (veqryn)

* Deleting unit attachment, "isFactory", but keeping the setter so that old xml's will not break. 
    setting isFactory now just sets: canBeDamaged, isInfrastructure, canProduceUnits, isConstruction, constructionType = "factory", maxConstructionsPerTypePerTerr = 1, constructionsPerTerrPerTypePerTurn = 1. (veqryn)

* Created new game option, "Submarines Prevent Unescorted Amphibious Assaults", that prevent unescorted transports from conducting amphibious assaults. (veqryn)

* Created new game option, "Kamikaze Suicide Attacks Only Where Battles Are", and implemented it. (veqryn)

* Fixed bug where land units would disappear when conquering a sea zone. (veqryn)

* Making kamikaze and interceptor dialogs non-modal so user can move around map while choosing. Again, saving during the dialog then reloading might have odd effects. (veqryn)
